fix(components): Minor alignment adjustments to controls and UI

--- a/src/components/core/Datasets/style.css
+++ b/src/components/core/Datasets/style.css
@@ -35,12 +35,12 @@
   align-items: center;
 }
 
-:global(.v-expansion-panel__header) {
-  padding: 4px 10px 4px 4px;
-}
-
 .subpanelHeader {
   margin-left: 1em;
+}
+
+.subpanelTitle {
+  margin-left: 4px;
 }
 
 .headerMenuButton {
